2004-02-26  Carl Worth  <cworth@isi.edu>

	* AUTHORS: Add Jordi and Olivier to the AUTHORS file.

	* src/cairo_ft_font.c (_utf8_to_ucs4): Fix broken return value for
	nchars (thanks to Jordi Mas <jordi@ximian.com>).

2004-02-24  Olivier Andrieu  <oliv__a@users.sourceforge.net>

	* src/cairo.h:
	* src/cairo-features.h.in:
	* src/cairo_png_surface.c: Add PNG backend (cairo_set_target_png
	and cairo_png_surface_create).

	* cairo.pc.in:
	* configure.in: autoconf support for the PNG backend. Bump version
	to 0.1.19.
	
	* src/Makefile.am: PNG backend support, removed references to
	X_LIBS and X_CFLAGS.

2004-02-24  Carl Worth  <cworth@isi.edu>

	* AUTHORS: Add attribution for many people who have made generous
	contributions to cairo. This list was generated by sifting through
	the ChangeLog. Please let me know if I have missed anyone.

	* NEWS: Add some historical notes on cairo development, prior to
	when we began to maintain this NEWS file.

	* README (http): Add pointer to cairographics.org. Fix to use
	"cairo" rather than "Cairo" when not at the beginning of a
	sentence.

	* TODO: Remove cairo_current_path, cairo_current_path_flat,
	cairo_text_extents, cairo_glyph_extents, cairo_text_path, and
	cairo_glyph_path from the TODO list as they have all been
	implemented now.

2004-02-17  Carl Worth  <cworth@isi.edu>

	* src/cairo.h: Add comment indication cairo_copy will be going
	away at some point. Some indentation fixes.

	* configure.in: Bump version to 0.1.18. Includes new functions
	cairo_current_path, cairo_current_path_flat,
	cairo_surface_get_filter. Support for XCB backend. Fixes for
	building in cygwin. Adds cairo_surface_get_filter.

	* src/cairo.h: 
	* src/cairo.c (cairo_current_path): 
	(cairo_current_path_flat): Add new path query functions.

	* src/cairo_gstate.c (_gpi_move_to):
	(_gpi_line_to):
	(_gpi_curve_to):
	(_gpi_close_path):
	(_cairo_gstate_interpret_path): Implement support for
	cairo_current_path and cairo_current_path_flat. These functions