@@ -1,3 +1,13 @@
+2004-03-16  Jamey Sharp <jamey@minilop.net>
+
+	* src/cairo.h:
+	* src/cairo_xcb_surface.c:
+	Updated for XCB typename renaming. The Xlib and XCB surfaces can
+	be compiled in the same library now.
+
+	* src/cairo_surface.c:
+	Initialize the surface's filter value.
+
 2004-02-26  Carl Worth  <cworth@isi.edu>
 
 	* AUTHORS: Add Jordi and Olivier to the AUTHORS file.
